# FJL-ShellGeneration

./: .gitignore  .gitmodules  install.sh  pyproject.toml
cfgs/Tooth_models/: PoinTr.yaml
cfgs/dataset_configs/: Tooth.yaml
data/: shapenet_synset_dict.json
data/dental/crown/: test.txt
datasets/: build.py  crowndataset.py  easy_mesh_vtk.py
models/: PoinTr.py  __init__.py
scripts/: test.sh  train.sh
tools/: builder.py  runner.py
utils/: metrics.py  parser.py
